@@ -12,6 +12,7 @@ version 0.1.0
     $ prq list closed # not shown by default
     $ prq show 7      # also includes comments
     $ prq patch 7     # can be piped to colordiff if you like colors
+    $ prq checkout 7  # create upstream tracking branch pr/7
     $ prq help
 
     $ prq login       # Get access token for commands below
@@ -52,6 +53,12 @@ comments.
 ## patch <number>
 
 Shows the patch associated with the specified pull request number.
+
+## checkout <number>
+
+Checks out the specified pull request in a dedicated tracking branch.
+If the remote repo is not already specified in your git config, it will be
+added and the branch in question will be fetched.
 
 ## close <number>
 
