@@ -1,6 +1,7 @@
 Revision history for App-GitHubPullRequest
 
 {{$NEXT}}
+    - Added checkout command (PR#4)
 
 0.1.0     2013-03-08 15:30:53 Europe/Oslo
     - Added login command
